tests/ui/feature-gates/feature-gate-precise-capturing-of-types.rs
fn foo<T>() -> impl Sized + use<> {}
//~^ ERROR `impl Trait` must mention all type parameters in scope in `use<...>`

fn main() {}
